# task-runner

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Trisyllabic.mlapp  instructions.txt  package.json
examples/Skeleton/: task.yml
examples/Skeleton/resources/: block2a.flac  description.txt
examples/Skeleton/templates/: block4a.yml  block4b.yml  block4c.yml  block4d.yml  block5a.yml  block5b.yml
examples/Trisyllabic/: README.md  task.yml
resources/text/: description.txt
src/: App.svelte  action.rs  app.rs  aux.rs  block.rs  comm.rs  config.rs  dispatch.rs  error.rs  global.rs  gui.rs  lib.rs  logger.rs  main.rs  question.rs  sound.rs  style.rs  task.rs  util.rs  window.rs
src-tauri/: tauri.conf.json
src/assets/: Instructions.svelte
src/lib/: Audio.svelte  Block.svelte  Counter.svelte  Dead.svelte  Fixation.svelte  Questionnaire.svelte  Selection.svelte  Startup.svelte  types.ts  utils.ts
