[package]
name = "neurotask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
iced = { version = "0.3", features = ["image", "debug", "async-std", "svg"] }
iced_native = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#serde_derive = "1.0"
rodio = "0.15"
chrono = "0.4"
